# RoadChecker

./: LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
AcceleroMeter/: AcceleroMeter.cc  AcceleroMeter.h  AcceleroMeterTypes.h
GPSModule/: GPSModule.cc  GPSModule.h  GeoCoordinate.cc  GeoCoordinate.h
RoadChecker/: RoadChecker.cc  RoadChecker.h  RoadStateTypes.h
SpeedUnit/: SpeedUnit.cc  SpeedUnit.h
StateHandler/: StateHandler.cc  StateHandler.h
unit/CheatSheet/: RoadCheckerTest.cc
unit/RoadChecker/: CMakeLists.txt  RoadCheckerTest.cc
unit/mocks/: MockAcceleroMeter.cc  MockAcceleroMeter.h  MockGPSModule.cc  MockGPSModule.h  MockSpeedUnit.cc  MockSpeedUnit.h  MockStateHandler.cc  MockStateHandler.h
